ISSUE ED-754 fix :  Lengthy program name is not showing properly in Created by me project

--- a/src/app/manage-learn/shared/components/item-list-card/item-list-card.component.scss
+++ b/src/app/manage-learn/shared/components/item-list-card/item-list-card.component.scss
@@ -27,6 +27,9 @@ ion-card-header {
     padding-top: 8px;
     padding-bottom: 8px;
     background: #ffffff;
+    ion-card-content{
+    word-break: break-all;
+    }
 }
 
 .alterCard{
